--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true, // Workaround for https://github.com/angular/angular/issues/17863. Remove this if you upgrade to a fixed version of Angular.
     "strict": true,
+    "strictNullChecks": false,      //added to help resolve "type string is not assignable to type null" error
     "lib": [ "es6", "dom" ],
     "types": [ "webpack-env" ]
   },
